# transc-with-rust

./: Cargo.toml  README.md
input/: out.csv
src/: main.rs
src/lib/: account.rs  accountList.rs  input_file_struct.rs  mod.rs  read_csv.rs  write_csv.rs
