[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.1.17", features = ["derive"] }
clap_lex = { version = "0.2.0"}
structopt = { version = "0.3.26"}
